<resources>
    <string name="app_name">News and Blogs </string>

    <string name="sign_in">Sign-In</string>

    <string name="login">Login</string>
    <string name="eemail">Enter Email Address</string>
    <string name="epassword">Enter Password</string>

    <string name="signin">Sign In</string>
    <string name="forgot">Forgot password?</string>
    <string name="register">Register here&#8230;</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation Bar -->
    <string name="preference">Preference</string>
    <string name="title_home">Home</string>
    <string name="my_blogs">My Blogs</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <!--  -->
    <string name="new_blog">New Blog</string>

    <!-- Blog Variables -->
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="enter_author">Author Name</string>
    <string name="enter_tag">Select Tag</string>
    <string name="enter_datetime">Date &amp; Time</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FC -->
    <string name="name_of_org">Blog Title</string>
    <string name="simple_desc">Sample text displaying blog information</string>
    <string name="image">Author name</string>
    <!-- /FC -->

    <!-- Articles -->
    <string name="zeronet">ZeroNet - A Decentralised Internet</string>
    <string name="nokia">Nokia 6.1 Plus launched in India</string>
    <string name="punewomen">Pune to Witness Women in Data Science Conference</string>
    <string name="blockcummit">Malta AI &amp; Blockchain Summit 2019</string>
    <string name="kharagpur">IIT Kharagpur Set to Host 16th Annual Alumni Meet 2019</string>
    <string name="google">Google Trends - A Trend in Itself</string>
    <string name="internet">Internet in Flight: Now Access it While Flying Over India</string>

</resources>
