<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_blog"
        android:textSize="35sp"
        android:background="@color/blue" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:hint="@string/enter_title"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:textSize="20sp"
        android:hint="@string/enter_content"
        android:textAlignment="textStart"
        />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/enter_author"
        android:textStyle="bold" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/enter_tag" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_datetime"
        android:textSize="25sp"
        />



</LinearLayout>